Add Boilerplate HTML, first content and CSS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <title>myTimes</title>
   </head>
   <body>
+    <div id="header">
+      <h3>myTimes</h3>
+      <nav>
+        <ul>
+          <a href="">World<li></li></a>
+          <a href="">U.S.<li></li></a>
+          <a href=""><li>Tech</li></a>
+          <a href=""><li>Science</li></a>
+        </ul>
+      </nav>
+    </div>
+
 
   </body>
 </html>
