full HTML content

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
       </div>
 
       <div id="middleColumn">
-      <div id="medium">
         <h2>FBI Finds Action Star Guilty of False Advertising</h2>
         <p>WASHINGTON DC - Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam
           vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed.
@@ -73,6 +72,31 @@
           Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien,
           a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo
           tellus pellentesque in.</p>
+      </div>
+
+      <div id="rightColumn">
+        <img src="resources/cookie.png">
+        <h4>NEWS BITES</h4>
+        <p>Cat Emoji Goes Viral</p>
+        <p>Buy YouTube Views</p>
+        <p>Home Business Advertising Ideas</p>
+        <p>Advertising Internet Online</p>
+        <p>Illustration in Marketing Materials</p>
+        <p>Finally a Top Secret Way You Can</p>
+      </div>
+
+    <div id="footer">
+      <p>My Times</p>
+      <ul>
+        <li>World</li>
+        <li>U.S.</li>
+        <li>Tech</li>
+        <li>Science</li>
+      </ul>
+      <p>&copy; 2016, My Times (A division of Codecademy bite)
+    </div>
+
+
 
 
 
