new content and css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-
+  <div id="container">
     <div id="header">
       <img src="resources/myt_logo.jpg">
       <h3 id="logo">My Times</h3>
@@ -25,8 +25,7 @@
     <div id="leftColumn"
 
       <div id="large">
-        <img src="resources/main_story.png">
-        <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
+        <h1 id="mainImage">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
         <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus,
           ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla
@@ -38,6 +37,7 @@
           massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis
           neque. Nullam sit amet fringilla massa.</p>
       </div>
+    </div>
 
       <div id="smallLeft">
         <h2>Orca spends Vacation at Land World Puget</h2>
@@ -48,11 +48,11 @@
         <p>MEW YORK, MY - Interdum et malesuada fames ac ante ipsum primis in faucibus.
           Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
 
-        <img src="resources/fall_season.png">
-        <h2>Earth Spins Backwards for 2017</h2>
 
-        <img src="resources/hipster_cameraman.png">
-        <h2>Research Shows Cameras Erase Memory</h2>
+        <h2 id="earth">Earth Spins Backwards for 2017</h2>
+
+
+        <h2 id="camera">Research Shows Cameras Erase Memory</h2>
       </div>
 
       <div id="middleColumn">
@@ -65,8 +65,7 @@
           augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus.
           Vestibulum blandit aliquam felis...</p>
 
-        <img src="resources/cat_ceo.png">
-        <h2>Cats in Control - Is It a Thing?</h2>
+        <h2 id="cats">Cats in Control - Is It a Thing?</h2>
         <p>BROOKLYN, NY - In molestie nulla sodales sit amet. Proin vulputate, ipsum porta
           aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
           Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien,
@@ -101,7 +100,7 @@
 
 
     </div>
-
+</div>
 
   </body>
 </html>
