--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div id="Content">
 
-    <div id="leftColumn"
+    <div class="column large">
 
       <div id="large">
         <h1 id="mainImage">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-      <div id="smallLeft">
+      <div>
         <h2>Orca spends Vacation at Land World Puget</h2>
         <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus.
           Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan..</p>
@@ -55,7 +55,7 @@
         <h2 id="camera">Research Shows Cameras Erase Memory</h2>
       </div>
 
-      <div id="middleColumn">
+      <div class="column medium">
         <h2>FBI Finds Action Star Guilty of False Advertising</h2>
         <p>WASHINGTON DC - Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam
           vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed.
@@ -73,7 +73,7 @@
           tellus pellentesque in.</p>
       </div>
 
-      <div id="rightColumn">
+      <div class="column small">
         <img src="resources/cookie.png">
         <h4>NEWS BITES</h4>
         <p>Cat Emoji Goes Viral</p>
