--- a/index.html
+++ b/index.html
@@ -42,18 +42,23 @@
 
 
       <div id="largeSmall">
+      <div id="orca">
         <h2>Orca spends Vacation at Land World Puget</h2>
         <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus.
           Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan..</p>
+      </div>
 
+
+      <div id="burger">
         <h2>Burger for Breakfast: How Early is too Early?</h2>
         <p>MEW YORK, MY - Interdum et malesuada fames ac ante ipsum primis in faucibus.
           Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+      </div>
         </div>
 
         <div id="pictureArticles"
 
-        <h2>Earth Spins Backwards for 2017</h2>
+        <h2>Earth Spins Backwards For 2017</h2>
         <h2>Research Shows Cameras Erase Memory</h2>
       </div>
     </div>
@@ -76,7 +81,7 @@
           tellus pellentesque in.</p>
       </div>
 
-      <div class="small">
+      <div id="small">
         <img src="resources/cookie.png">
         <h4>NEWS BITES</h4>
         <p>Cat Emoji Goes Viral</p>
