--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
         <div id="pictureArticles"
 
-        <h2>Earth Spins Backwards For 2017</h2>
-        <h2>Research Shows Cameras Erase Memory</h2>
+        <h2 id="earth">Earth Spins Backwards For 2017</h2>
+        <h2 id="cameras">Research Shows Cameras Erase Memory</h2>
       </div>
     </div>
 
