--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
           tellus pellentesque in.</p>
       </div>
 
-      <div id="small">
+      <div id="small" class "column">
         <img src="resources/cookie.png">
+      <div class="news-bites">
         <h4>NEWS BITES</h4>
         <p>Cat Emoji Goes Viral</p>
         <p>Buy YouTube Views</p>
@@ -90,6 +91,7 @@
         <p>Advertising Internet Online</p>
         <p>Illustration in Marketing Materials</p>
         <p>Finally a Top Secret Way You Can</p>
+      </div>
       </div>
     </div>
 
