--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <div id="small" class "column">
-        <img src="resources/cookie.png">
+        <img class= "cookie" src="resources/cookie.png">
       <div class="news-bites">
         <h4>NEWS BITES</h4>
         <p>Cat Emoji Goes Viral</p>
