--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         <img class= "cookie" src="resources/cookie.png">
       <div class="news-bites">
         <h4>NEWS BITES</h4>
-        <p>Cat Emoji Goes Viral</p>
-        <p>Buy YouTube Views</p>
-        <p>Home Business Advertising Ideas</p>
-        <p>Advertising Internet Online</p>
-        <p>Illustration in Marketing Materials</p>
-        <p>Finally a Top Secret Way You Can</p>
+        <span class="bite">Cat Emoji Goes Viral</span>
+        <span class="bite">Buy YouTube Views</span>
+        <span class="bite">Home Business Advertising Ideas</span>
+        <span class="bite">Advertising Internet Online</span>
+        <span class="bite">Illustration in Marketing Materials</span>
+        <span class="bite">Finally a Top Secret Way You Can</span>
       </div>
       </div>
     </div>
