--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div id="small" class "column">
         <img class= "cookie" src="resources/cookie.png">
       <div class="news-bites">
-        <h4>NEWS BITES</h4>
+        <h4 id="bite-heading">NEWS BITES</h4>
         <span class="bite">Cat Emoji Goes Viral</span>
         <span class="bite">Buy YouTube Views</span>
         <span class="bite">Home Business Advertising Ideas</span>
