--- a/index.html
+++ b/index.html
@@ -43,23 +43,23 @@
 
       <div id="largeSmall">
       <div id="orca">
-        <h2>Orca spends Vacation at Land World Puget</h2>
+        <h1>Orca spends Vacation at Land World Puget</h1>
         <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus.
           Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan..</p>
       </div>
 
 
       <div id="burger">
-        <h2>Burger for Breakfast: How Early is too Early?</h2>
+        <h1>Burger for Breakfast: How Early is too Early?</h1>
         <p>MEW YORK, MY - Interdum et malesuada fames ac ante ipsum primis in faucibus.
           Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
       </div>
         </div>
 
-        <div id="pictureArticles"
+        <div id="pictureArticles">
 
-        <h2 id="earth">Earth Spins Backwards For 2017</h2>
-        <h2 id="cameras">Research Shows Cameras Erase Memory</h2>
+        <h1 id="earth">Earth Spins Backwards For 2017</h1>
+        <h1 id="cameras">Research Shows Cameras Erase Memory</h1>
       </div>
     </div>
 
