--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <p>MEW YORK, MY - Interdum et malesuada fames ac ante ipsum primis in faucibus.
           Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
       </div>
-        </div>
+      </div>
 
         <div id="pictureArticles">
 
-        <h1 id="earth">Earth Spins Backwards For 2017</h1>
-        <h1 id="cameras">Research Shows Cameras Erase Memory</h1>
+        <h1 id="pictureArticlesLine">Earth Spins Backwards For 2017</h1>
+        <h1 id="pictureArticlesLine">Research Shows Cameras Erase Memory</h1>
       </div>
     </div>
 
