--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <div id="mainContent">
 
      <div class="large">
-
-        <h1 id="mainImage">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
+      <div id="mainImage">
+        <h1 id="mainHeadline">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
+      </div>
         <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus,
           ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla
@@ -56,10 +57,14 @@
       </div>
       </div>
 
-        <div id="pictureArticles">
+      <div id="pictureArticles">
+      <div id="earthImage">
+        <h1 id="pictureArticlesText">Earth Spins Backwards For 2017</h1>
+      </div>
 
-        <h1 id="pictureArticlesLine">Earth Spins Backwards For 2017</h1>
-        <h1 id="pictureArticlesLine">Research Shows Cameras Erase Memory</h1>
+      <div id="cameraImage">
+        <h1 id="pictureArticlesText">Research Shows Cameras Erase Memory</h1>
+      </div>
       </div>
     </div>
 
@@ -72,8 +77,9 @@
           placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum
           augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus.
           Vestibulum blandit aliquam felis...</p>
-
-        <h2 id="cats">Cats in Control - Is It a Thing?</h2>
+      <div id="cat">
+        <h2 id="pictureArticlesText">Cats in Control - Is It a Thing?</h2>
+      </div>
         <p>BROOKLYN, NY - In molestie nulla sodales sit amet. Proin vulputate, ipsum porta
           aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
           Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien,
