--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
       </div>
     </div>
 
-    <div id="footer">
-      <p>My Times</p>
-      <ul>
-        <li>World</li>
-        <li>U.S.</li>
-        <li>Tech</li>
-        <li>Science</li>
+    <footer>
+      <p id="footerLogo">My Times</p>
+      <ul id="footerLinks">
+        <a href=""><li>World</li></a>
+        <a href=""><li>U.S.</li></a>
+        <a href=""><li>Tech</li></a>
+        <a href=""><li>Science</li></a>
       </ul>
-      <p>&copy; 2016, My Times (A division of Codecademy bite)
-    </div>
+    <p>&copy; 2016, My Times (A Division of Codecademy bite)</p>
+    </footer>
 
 
 
