new styling and links

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
      </div>
       <nav>
         <ul>
-          <a href="">World<li></li></a>
-          <a href="">U.S.<li></li></a>
-          <a href=""><li>Tech</li></a>
-          <a href=""><li>Science</li></a>
+          <a href="world.html">World<li></li></a>
+          <a href="us.html">U.S.<li></li></a>
+          <a href="tech.html"><li>Tech</li></a>
+          <a href="science.html"><li>Science</li></a>
         </ul>
       </nav>
     </header>
@@ -105,12 +105,12 @@
     <footer>
       <p id="footerLogo">My Times</p>
       <ul id="footerLinks">
-        <a href=""><li>World</li></a>
-        <a href=""><li>U.S.</li></a>
-        <a href=""><li>Tech</li></a>
-        <a href=""><li>Science</li></a>
+        <a href="world.html"><li>World</li></a>
+        <a href="us.html"><li>U.S.</li></a>
+        <a href="tech.html"><li>Tech</li></a>
+        <a href="science.html"><li>Science</li></a>
       </ul>
-    <p>&copy; 2016, My Times (A Division of Codecademy bite)</p>
+    <p id="copyright">&copy; 2016, My Times (A Division of Codecademy bite)</p>
     </footer>
 
 
