--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
         <a href="tech.html"><li>Tech</li></a>
         <a href="science.html"><li>Science</li></a>
       </ul>
+    <div id="copyrightDiv">
     <p id="copyright">&copy; 2016, My Times (A Division of Codecademy bite)</p>
+  </div>
     </footer>
 
 
