--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     </div>
 
     <footer>
+      <div id="logoLinks">
       <p id="footerLogo">My Times</p>
       <ul id="footerLinks">
         <a href="world.html"><li>World</li></a>
@@ -110,9 +111,10 @@
         <a href="tech.html"><li>Tech</li></a>
         <a href="science.html"><li>Science</li></a>
       </ul>
+    </div>
     <div id="copyrightDiv">
-    <p id="copyright">&copy; 2016, My Times (A Division of Codecademy bite)</p>
-  </div>
+      <p id="copyright">&copy; 2016, My Times (A Division of Codecademy bite)</p>
+    </div>
     </footer>
 
 
